# Raytracing_developing_a_3D_renderer_from_zero

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  thesis_index.txt
ext/: CMakeLists.txt
ext/happly/: CMakeLists.txt
ext/plycpp/: CMakeLists.txt  README.md
ext/plycpp/plycpp/: example.cpp  plycpp.cpp  plycpp.h  plycpp_runner.h
ext/stb_image/: CMakeLists.txt
ext/stb_image/stb_image/: stb_image_resize2.h  stb_image_runner.cpp
libs/: CMakeLists.txt  r3df0_axisAlignBBoxes.h  r3df0_axisAlignedBoundingBoxes.h  r3df0_bvh.h  r3df0_camera.h  r3df0_color.h  r3df0_ftransforms.h  r3df0_hittable.h  r3df0_hittable_interface.h  r3df0_hittable_superclass.h  r3df0_image.h  r3df0_material.h  r3df0_material_interface.h  r3df0_material_superclass.h  r3df0_math.h  r3df0_perlin.h  r3df0_polygons.h  r3df0_polygons_superclass.h  r3df0_rays.h  r3df0_shapes.h  r3df0_texture.h  r3df0_texture_interface.h  r3df0_texture_superclass.h  r3df0_varsutil.h  r3dfrom0_math.h  std_includes.h
logs/DrMemory-polygon_loading_testing_ground.exe.11680.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.13288.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.2640.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.3768.000/: missing_symbols.txt  potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.440.000/: missing_symbols.txt  potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.4660.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.4796.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.5224.000/: potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.6660.000/: missing_symbols.txt  potential_errors.txt  results.txt  suppress.txt
logs/DrMemory-polygon_loading_testing_ground.exe.9480.000/: missing_symbols.txt  potential_errors.txt  results.txt  suppress.txt
old_renders/: hello_world.ppm
resources/models/: bunny.ply  test_mesh.ply
src/: CMakeLists.txt  code_cuts.txt  example.cpp  loadfile_test.cpp  main.cpp  polygon_loading_testing_ground.cpp  r3df0_final_scene.cpp  r3df0_firstHalf_finalRender.cpp  r3df0_hello_sphere.cpp  r3df0_hello_world.cpp  r3df0_main.cpp  r3df0_main1.cpp  r3df0_new_camera_tech_test.cpp  r3df0_quadBox_test.cpp  r3df0_simple_emission_scene.cpp  r3df0_texture_render.cpp  r3dfr0_cornell_box.cpp  r3dfr0_transformations_tests.cpp
